Fixed image spacing

--- a/CSS/index4.css
+++ b/CSS/index4.css
@@ -244,7 +244,7 @@ body {
 
     .home-image {
         height: auto;
-        width: 50%;
+        width: 80%;
         border-radius: 10px;
     }
 }
